[FIX] hr_expense: statusbar overflow on mobile
Steps to reproduce
==================

- Install Expense (hr_expense)
- Use a small viewport
- Go to Expense
=> The status bar overflows

opw-3704233

X-original-commit: 0096c62a4aa8fc79c87d0d33efe5ae5c16fcd560

--- a/addons/hr_expense/static/src/scss/hr_expense.scss
+++ b/addons/hr_expense/static/src/scss/hr_expense.scss
@@ -28,6 +28,13 @@
         max-height: 100%;
     }
 }
+
+.o_expense_container {
+    @include media-breakpoint-down(sm) {
+        overflow: auto visible;
+    }
+}
+
 .o_dropzone {
     width: 100%;
     height: 100%;
